# zui

./: .gitignore  CONTRIBUTING.md  DECISIONS.md  LICENSE  README.md  RELEASE_AUDIT.md  package-lock.json  package.json  pyproject.toml  tsup.config.ts  vitest.config.ts
.github/workflows/: ci.yml  publish.yml
docs/: SECURITY-FIXES-REQUIRED.md  codex-compatibility-plan.md  security-audit-2026-02-15.md  web-app-design.md  web-implementation-plan.md
docs/plans/: 2026-02-09-typescript-migration-design.md  2026-02-09-typescript-migration.md
docs/specs/: fullscreen-toggle.md
examples/: config.toml
src/: app.tsx  cli.ts  config.ts  discovery.ts  index.tsx  sessions.ts  shell.ts  types.ts
src/__tests__/: cli.test.ts  config.test.ts  discovery.test.ts  shell.test.ts  worktrees.test.ts
src/ui/: Footer.tsx  Header.tsx  HelpDialog.tsx  ProjectPicker.tsx  SessionList.tsx  SettingsDialog.tsx  keybindings.ts  layout.ts  theme.ts
tests/: test_config.py  test_discovery.py  test_sessions.py  test_worktrees.py
zui/: __init__.py  __main__.py  app.py  config.py  discovery.py  sessions.py  worktrees.py
zui/ui/: layout.py  theme.py  widgets.py
