[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zui-agent-manager"
version = "0.1.0"
description = "TUI for managing AI coding agents (Claude Code) in tmux sessions"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "ZUI Contributors" }]
keywords = ["claude", "tmux", "tui", "agent", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console :: Curses",
    "Intended Audience :: Developers",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Terminals :: Terminal Emulators/X Terminals",
]

[project.scripts]
zui = "zui.__main__:main"

[project.urls]
Homepage = "https://github.com/zuiproject/zui"
Issues = "https://github.com/zuiproject/zui/issues"
